<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.rotarientertainmentcard.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zerodpHeight"
        android:layout_marginBottom="@dimen/smallBottomMargin"
        android:layout_weight="1"
        android:contentDescription="@string/rotariEntertainmentLogoDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/microphone_image" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/microphoneImageDescription"
        android:src="@drawable/rotari_entertainment_logo" />

    <TextView
        android:id="@+id/companyNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallBottomMargin"
        android:layout_marginEnd="@dimen/rightMargin"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"
        android:layout_marginStart="@dimen/leftMargin"
        android:text="@string/companyDescription"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/companyPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallBottomMargin"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginStart="@dimen/leftMargin"
        android:autoLink="phone"
        android:text="@string/companyPhoneNumber"
        android:textColorLink="@android:color/tertiary_text_dark" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallBottomMargin"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginStart="@dimen/leftMargin"
        android:autoLink="email"
        android:text="@string/companyEmailAddress"
        android:textColorLink="@android:color/tertiary_text_dark" />

    <TextView
        android:id="@+id/companyWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/largeBottomMargin"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginStart="@dimen/leftMargin"
        android:autoLink="web"
        android:text="@string/companyWebpage"
        android:textColorLink="@android:color/tertiary_text_dark" />

</LinearLayout>
